Mon Jul  7 13:10:46 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Modified the behavior of adding to prebuild, postbuild, and
          postclean.  Values that are added are now separated via the
          command separator for the project type.  This will assure that
          multiple commands are executed separately (and unconditionally).

Thu Jul  3 16:36:30 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/Creator.pm:
        * modules/ProjectCreator.pm:

          Added a new keyword, postclean, which is similar to postbuild
          except that it is executed during the realclean target.

        * templates/bmake.mpd:
        * templates/html.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:

          Added the use of postclean.

Thu Jul  3 14:49:52 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          For the previous change to generate_default_components(), we only
          need to do this if the list of component tags was not provided to
          the method.

Thu Jul  3 11:46:23 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed an issue where a chain of three or more Custom_Define's
          would not have the right default input/output.

Wed Jul  2 16:35:22 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/CommandHelper.pm:
        * modules/ProjectCreator.pm:

          Modified the helper to be keyed off of the define custom name
          instead of the define custom command name.

Wed Jul  2 14:04:39 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/CommandHelper.pm:
        * modules/ProjectCreator.pm:

          Added a command helper that can be dynamically loaded to assist
          the project creator in determining which files will be generated